kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeusrmgmt-web
  namespace: kubeusrmgmt
spec:
  selector:
    app: kubeusrmgmt-web
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
