kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeusrmgmt-web
  namespace: kubeusrmgmt
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kubeusermgmt.devopstech.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubeusrmgmt-web
                port:
                  number: 5001
